--- a/index_es.html
+++ b/index_es.html
@@ -129,6 +129,7 @@
                           <li><a href="#caroufredsel">CarouFredSel</a></li>
                           <li><a href="#komento">Komento</a></li>
                           <li><a href="#kunena">Kunena</a></li>
+                          <li><a href="#tm_ajax_contact_form">Módulo TM Ajax Contact Form</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -150,7 +151,9 @@
                          <dd>
                            <ul class="list">          
                             <li><a href="#layout">Diseño </a></li>
-                            <li><a href="#typography">Tipografía</a></li>                    
+                            <li><a href="#typography">Tipografía</a></li>
+                            <li><a href="#background_video">Configuración del Video de Fondo (Background video)</a></li>
+                            <li><a href="#parallax">Usando el efecto Parallax</a></li> 
                             <li><a href="#features">Características</a></li>                    
                            </ul> 
                        </dd>
@@ -1093,6 +1096,18 @@ Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instal
     <p>Mas informacion sobre instalacion y uso del componente Kunena en el <a href="http://www.kunena.org/docs/Main_Page" target="_blank">sitio web oficial</a>.</p>
   </div>
 
+  <div id="tm_ajax_contact_form">
+    <h3>Módulo TM Ajax Contact Form</h3>
+    <div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-1.png" alt=""></figure>
+    <p class="muted text-center">Img. 23. Módulo TM Ajax Contact Form </p></div>
+
+    <p>El TM Ajax Contact Form es un módulo de formulario de contacto para el motor Joomla. Este módulo permite añadir formularios de contacto en cualquier página de Joomla. El envío de datos se realiza utilizando requests de AJAX, porque lo que la página no tiene que volver a cargarse. Las configuraciones del módulo  permiten añadir protección contra bots (reCaptcha), crear campos de formulario de contactos, sus etiquetas, configurar la dirección de email del destinatario, agregar la dirección CC (Con Copia) y los mensajes de error y éxito. Puedes ver la lista completa de las configuraciones debajo. </p>
+
+    <div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-2.png" alt=""></figure>
+    <p class="muted text-center">Img. 24. Configuración del módulo TM Ajax Contact Form</p></div>
+
+  </div>
+
 </section>
 
 <section id="configuring-pages" class="block-templates">
@@ -1180,7 +1195,71 @@ Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instal
     <div class="img-container"><figure class="img-polaroid"><img src="img/template-settings-3.jpg" alt=""></figure>
     <p class="muted text-center">Img 27. Typography options</p></div>
     
-  </div>  
+  </div>
+
+  <div id="background_video">
+<h3>Configuración del Video de Fondo (Background video)</h3>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/video-1.png" alt=""></figure>
+<p class="muted text-center">Img 28. Video de fondo en la página web</p></div>
+
+<p>Se pueden agregar videos de fondo a la plantilla con la ayuda del plugin <a href="http://vodkabears.github.io/vide/" target="_blank" rel="nofollow">Vide</a> de jQuery. Comprueba si el plugin está habilitado. Para poder comprobarlo ve a “Administrador de plantillas --> Plantillas”, luego ve al tema que utilizas (TemaXXXX Detalles y Archivos), abre el archivo “index.php” y comprueba si el plugin está inicializado, al igual que en la imagen 29. También comprueba si el plugin está disponible en la carpeta “js”. En caso de que el plugin no se encuentre allí, puedes descargarlo utilizando el enlace de arriba y subirlo a la carpeta correspondiente. También no olvides agregar el script al archivo “index.php”. </p>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/video-4.png" alt=""></figure>
+<p class="muted text-center">Img 29. Verificación de Inicialización del Plugin </p></div>
+
+<p>Con el fin de colocar un video de fondo, ve a “Administrador de Plantillas --> Plantillas”, haz clic en la plantilla que utilizas (TemaXXXX Detalles y Archivos). En un directorio de “html --> mod_custom” crea un archivo “<nombre>.php” con el siguiente contenido:</p>
+
+<pre><code>&lt;?php
+/**
+* @package Joomla.Site
+* @subpackage mod_custom
+*
+* @copyright Copyright (C) 2005 - 2012 Open Source Matters, Inc. All rights reserved.
+* @license GNU General Public License version 2 or later; see LICENSE.txt
+*/
+
+defined('_JEXEC') or die;
+?&gt;
+&lt;div class="mod-custom mod-custom__&lt;?php echo $moduleclass_sfx ?&gt;" id="module_&lt;?php echo $module-&gt;id; ?&gt;"&gt;
+&lt;div class="video-container" data-vide-bg="&lt;?php echo JURI::base( true ).'/media/video/[nombre_de_archivo]'; ?&gt;"&gt;&lt;/div&gt;
+&lt;div class="module-content"&gt;
+&lt;div class="module-content-inner"&gt;
+&lt;?php echo $module-&gt;content;?&gt;
+&lt;/div&gt;
+&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+
+<p>donde [nombre_de_archivo] – es el nombre del archivo de video, sin añadir la extensión del archivo. </p>
+<p>También deberías preparar los siguientes formatos de video: mp4, ogv, webm y formatos de imagen de previsualización en png, jpg y gif. El nombre de archivo deberá ser el mismo para todos los archivos y debe corresponder con el anteriormente creado [nombre_de_archivo]. Todos los archivos deberán ser subidos a la carpeta de media\video\ en el directorio raíz de Joomla. <p>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/video-2.png" alt=""></figure>
+<p class="muted text-center">Img 30. Anular el contenido del archivo</p></div>
+
+<p>En el siguiente paso necesitas crear un módulo que muestre el video. Añade un módulo HTML personalizado con el siguiente contenido:</p>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/video-3.png" alt=""></figure>
+<p class="muted text-center">Img. 31. Configuración del módulo del video de fondo</p></div>
+
+<p>En la pestaña de “Avanzado” y en el menú desplegable de “Diseño Alternativo” elige tu plantilla de archivo [nombre_de_archivo] creada anteriormente. </p>
+
+<p>Después de que realices todos los pasos, verás el módulo con el video de fondo. </p>
+</div>
+
+<div id="parallax">
+<h3>Usando el efecto Parallax</h3>
+
+<p>El efecto Parallax puede ser agregado a la plantillas con la ayuda del plugin <a href="http://markdalgleish.com/projects/stellar.js/" target="_blank" rel="nofollow">Stellar</a>  de jQuery. </p>
+
+<p>Con el fin de añadir el efecto Parallax a la página, ve a “Administrador de Plantillas --> Plantillas”, haz clic en el nombre de la plantilla que utilizas (TemaXXXX Detalles y Archivos) y abre el archivo “index.php”. Selecciona el bloque al que necesites agregarle Parallax, por ejemplo “folio-row”, agrega la propiedad <pre><code>data-stellar-background-ratio="[valor]"</code></pre> como se muestra en la imagen 32: </p>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/parallax-1.png" alt=""></figure>
+<p class="muted text-center">Img 32. Usando el efecto Parallax</p></div>
+
+<p>donde [valor] – es la proporción que es relativa a la velocidad natural de desplazamiento, puedes checar por información detallada en la página de <a href="http://markdalgleish.com/projects/stellar.js/docs/" target="_blank" rel="nofollow">Documentación</a> del plugin. </p>
+
+<p>Después de que realices todos los pasos, verás el efecto Parallax en el bloque específico. </p>
+</div>
 
   <div id="features">
     <h3>Características</h3>
