--- a/index_fr.html
+++ b/index_fr.html
@@ -128,6 +128,7 @@
                           <li><a href="#caroufredsel">CarouFredSel</a></li>
                           <li><a href="#komento">Komento</a></li>
                           <li><a href="#kunena">Kunena</a></li>
+                          <li><a href="#tm_ajax_contact_form">Module de Formulaire de Contact en Ajax TM</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -149,7 +150,9 @@
                          <dd>
                            <ul class="list">          
                             <li><a href="#layout">Mise en page</a></li>
-                            <li><a href="#typography">Typographie</a></li>                    
+                            <li><a href="#typography">Typographie</a></li>
+                            <li><a href="#background_video">Définir une Vidéo de fond (Background video)</a></li>
+                            <li><a href="#parallax">Utiliser l'effet Parallax</a></li>      
                             <li><a href="#features">Fonctionnalités</a></li>                    
                            </ul> 
                        </dd>
@@ -1083,6 +1086,18 @@
     <p>Vous pouvez en apprendre plus sur Kunena utilisation de composants et de configuration à la <a href="http://www.kunena.org/docs/Main_Page" target="_blank">site officiel</a>.</p>
   </div>
 
+  <div id="tm_ajax_contact_form">
+<h3>Module de Formulaire de Contact en Ajax TM</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-1.png" alt=""></figure>
+<p class="muted text-center">Img. 23. Module de Formulaire de Contact en Ajax TM</p></div>
+
+<p>Le Module de Formulaire de Contact en Ajax TM est un module de formulaire de contact en ajax pour Joomla. Ce module permet d'ajouter un formulaire de contact sur n'importe quelle page Joomla/ L'envoi de données se fait à l'aide de requêtes AJAX, la page n'est donc pas rechargée. Les paramètres du module permettent d'ajouter de la protection contre les robots (reCaptcha), de définir les champs du formulaire de contact, leurs entêtes, de définir l'adresse e-mail du destinataire, d'ajouter l'adresse CC, ainsi qu des messages d'erreur et de succès. Vous pouvez consulter la liste complète des paramètres ci-dessous.</p>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-2.png" alt=""></figure>
+<p class="muted text-center">Img. 24. Paramètres du Module de Formulaire de Contact en Ajax TM</p></div>
+
+</div>
+
 </section>
 
 <section id="configuring-pages" class="block-templates">
@@ -1168,7 +1183,71 @@
     <div class="img-container"><figure class="img-polaroid"><img src="img/template-settings-3.jpg" alt=""></figure>
     <p class="muted text-center">Img 27. Options typographiques</p></div>
     
-  </div>  
+  </div>
+
+  <div id="background_video">
+<h3>Définir une Vidéo de fond (Vidéo de fond)</h3>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/video-1.png" alt=""></figure>
+<p class="muted text-center">Img 28. Vidéo de fond sur la page du site</p></div>
+
+<p>Il est possible d'ajouter une vidéo de fond au template à l'aide du plugin jQuery <a href="http://vodkabears.github.io/vide/" target="_blank" rel="nofollow">Vide</a>. Vérifiez que le plugin est activé. Pour le vérifier, allez dans "Template manager -> Templates", puis allez sur le thème que vous utilisez (ThemeXXXX Details and Files), ouvrez le fichier "index.php" file et vérifiez que le plugin est initialisé, comme sur l'Img. 29. Vérifiez également que le plugin est disponible dans le dossier "js". Si le plugin ne serait pas là, vous pouvez le télécharger à partir du lien ci-dessus et l'uploader dans le dossier correspondant. N'ouvliez pas également d'ajouter le script dans le fichier "index.php".</p>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/video-4.png" alt=""></figure>
+<p class="muted text-center">Img 29. Vérification de l'initialisation du plugin</p></div>
+
+<p>Pour mettre en place une vidéo de fond, allez dans "Template Manager -> Templates", cliquez sur le template que vous utilisez (ThemeXXXX Details and Files). Dans le dossier "html -> mod_custom" créez un fichier "<name>.php" avec le contenu suivant :</p>
+
+<pre><code>&lt;?php
+/**
+* @package Joomla.Site
+* @subpackage mod_custom
+*
+* @copyright Copyright (C) 2005 - 2012 Open Source Matters, Inc. All rights reserved.
+* @license GNU General Public License version 2 or later; see LICENSE.txt
+*/
+
+defined('_JEXEC') or die;
+?&gt;
+&lt;div class="mod-custom mod-custom__&lt;?php echo $moduleclass_sfx ?&gt;" id="module_&lt;?php echo $module-&gt;id; ?&gt;"&gt;
+&lt;div class="video-container" data-vide-bg="&lt;?php echo JURI::base( true ).'/media/video/[nom_du_fichier]'; ?&gt;"&gt;&lt;/div&gt;
+&lt;div class="module-content"&gt;
+&lt;div class="module-content-inner"&gt;
+&lt;?php echo $module-&gt;content;?&gt;
+&lt;/div&gt;
+&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+
+<p>avec [nom_du_fichier] - le nom du fichier vidéo, sans ajouter l'extension de fichier.</p>
+<p>Vous devez également préparer les formats vidéo suivants : mp4, ogv, webm et l'image de présentation de la vidéo aux formats png, jpg et gif. Le nom de fichier doit être le même pour tous les fichiers et correspondre à celui du fichier [nom_du_fichier] créé auparavant. Tous les fichiers doivent être uploadés dans le dossier racine Joomla media\video\<p>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/video-2.png" alt=""></figure>
+<p class="muted text-center">Img 30. Écraser le contenu du fichier</p></div>
+
+<p>À l'étape suivante, vous devez créer un module affichant la vidéo. Ajoutez un module HTML personnalisé avec le contenu suivant :</p>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/video-3.png" alt=""></figure>
+<p class="muted text-center">Img. 31. Paramètres du module de vidéo de fond</p></div>
+
+<p>Dans l'onglet "Advanced" et dans le menu déroulant "Alternative Layout", choisissez votre fichier template [nom_du_fichier] créé auparavant.</p>
+
+<p>Après avoir effectué toutes les étapes, vous verrez le module avec la vidéo de fond.</p>
+</div>
+
+<div id="parallax">
+<h3>Utiliser l'effet Parallax</h3>
+
+<p>L'effet Parallax peut être ajouté au template à l'aide du plugin jQuery <a href="http://markdalgleish.com/projects/stellar.js/" target="_blank" rel="nofollow">Stellar</a>.</p>
+
+<p>Pour ajouter l'effet Parallax à la page, allez dans "Template manager -> Templates", cliquez sur le nom du template que vous utilisez (ThemeXXXX Details and Files) et ouvrez le fichier "index.php". Sélectionnez le bloc auquel vous devez ajouter Parallax, par exemple "folio-row", ajoutez la propriété <pre><code>data-stellar-background-ratio="[valeur]"</code></pre> comme indiqué dans l'Img. 32:</p>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/parallax-1.png" alt=""></figure>
+<p class="muted text-center">Img 32. Utiliser l'effet Parallax</p></div>
+
+<p>avec [valeur] - le ratio relatif à la vitesse de défilement naturelle, vous pouvez obtenir des information détaillées sur la page de <a href="http://markdalgleish.com/projects/stellar.js/docs/" target="_blank" rel="nofollow">Documentation</a> du plugin.</p>
+
+<p>Après avoir effectué toutes les étapes, vous verrez l'effet Parallax dans le bloc spécifique.</p>
+</div>
 
   <div id="features">
     <h3>Fonctionnalités</h3>
