--- a/index_pt.html
+++ b/index_pt.html
@@ -101,7 +101,7 @@
                             <li><a href="#complete_install">Instalação Completa</a></li>
                             <li><a href="#template-installation">Instalação do Template</a></li>
                             <li><a href="#sample-data-installation">Instalação de Dados de Amostra</a></li>
-							<li><a href="#modules-installation">Instalação de Módulos</a></li>
+							              <li><a href="#modules-installation">Instalação de Módulos</a></li>
                            </ul> 
                        </dd>
                      </dl> 
@@ -128,6 +128,7 @@
                           <li><a href="#caroufredsel">CarouFredSel</a></li>
                           <li><a href="#komento">Komento</a></li>
                           <li><a href="#kunena">Kunena</a></li>
+                          <li><a href="#tm_ajax_contact_form">Módulo de Formulário de Contato TM Ajax</a></li>
                         </ul>
                       </dd>
                     </dl>
@@ -149,7 +150,9 @@
                          <dd>
                            <ul class="list">          
                             <li><a href="#layout">Layout</a></li>
-                            <li><a href="#typography">Tipografia</a></li>                    
+                            <li><a href="#typography">Tipografia</a></li>
+                            <li><a href="#background_video">Colocando vídeo no fundo (Background video)</a></li>
+                            <li><a href="#parallax">Usando o efeito de Parallax</a></li> 
                             <li><a href="#features">Funções</a></li>                    
                            </ul> 
                        </dd>
@@ -1097,6 +1100,20 @@
     <p>Você pode aprender mais sobre o uso do componente Kunena e configuração no <a href="http://www.kunena.org/docs/Main_Page" target="_blank">site oficial</a>.</p>
   </div>
 
+  <div id="tm_ajax_contact_form">
+<h3>Módulo de Formulário de Contato TM Ajax</h3>
+<div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-1.png" alt=""></figure>
+<p class="muted text-center">Img. 23. Módulo de Formulário de Contato TM Ajax</p></div>
+
+<p>
+O Formulário de Contato TM Ajax é um módulo de formulário para a engine do Joomla. Esse módulo permite adicionar formulários de contato em qualquer página do Joomla. O envio de dados é feito usando requisições AJAX, então a página não será recarregada. As configurações do módulo permitem que você inclua proteção contra bots (reCaptcha), configure os campos desejados, suas labels e enviar para um endereço de sua escolha, com cópias e mensagens de erro e sucesso. Veja a lista completa abaixo.
+</p>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/contact-form-2.png" alt=""></figure>
+<p class="muted text-center">Img. 24.Configurações do módulo TM Ajax</p></div>
+
+</div>
+
 </section>
 
 <section id="configuring-pages" class="block-templates">
@@ -1184,7 +1201,83 @@
     <div class="img-container"><figure class="img-polaroid"><img src="img/template-settings-3.jpg" alt=""></figure>
     <p class="muted text-center">Img 27. Opções de Tipografia</p></div>
     
-  </div>  
+  </div>
+
+  <div id="background_video">
+<h3>Colocando vídeo no fundo (Background video)</h3>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/video-1.png" alt=""></figure>
+<p class="muted text-center">Img 28. Vídeo de fundo na página do site</p></div>
+
+<p>
+O vídeo de fundo pode ser adicionado ao template com a ajuda do plugin do jQuery chamado <a href="http://vodkabears.github.io/vide/" target="_blank" rel="nofollow">Vide</a>. Verifique se o plugin está habilitado. Para descobrir isso, navegue para "Template manage -> Templates", então vá para o tema que você usa (ThemeXXXX arquivos e detalhes), abra o arquivo "index.php" e verifique se o plugin está sendo executado, como na imagem 29. Verifique, também, se o plugin está na pasta "js". No caso do plugin não estar lá, você pode baixá-lo usando o link acima e subir o arquivo para a pasta mencionada. Não esqueça de inserir o script para execução dele no arquivo index.php.
+</p>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/video-4.png" alt=""></figure>
+<p class="muted text-center">Img 29. Verificando a execução do plugin</p></div>
+
+<p>Para definir o vídeo de fundo, navegue para "Template Manager -> Templates", clique no template que você usa (ThemeXXXX arquivos e detalhes). Na pasta "html -> mod_custom" crie um arquivo chamado "<name>.php" com o seguinte conteúdo:</p>
+
+<pre><code>&lt;?php
+/**
+* @package Joomla.Site
+* @subpackage mod_custom
+*
+* @copyright Copyright (C) 2005 - 2012 Open Source Matters, Inc. All rights reserved.
+* @license GNU General Public License version 2 or later; see LICENSE.txt
+*/
+
+defined('_JEXEC') or die;
+?&gt;
+&lt;div class="mod-custom mod-custom__&lt;?php echo $moduleclass_sfx ?&gt;" id="module_&lt;?php echo $module-&gt;id; ?&gt;"&gt;
+&lt;div class="video-container" data-vide-bg="&lt;?php echo JURI::base( true ).'/media/video/[nome_do_arquivo]'; ?&gt;"&gt;&lt;/div&gt;
+&lt;div class="module-content"&gt;
+&lt;div class="module-content-inner"&gt;
+&lt;?php echo $module-&gt;content;?&gt;
+&lt;/div&gt;
+&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+
+<p>onde [nome_do_arquivo] é o nome do arquivo de vídeo, sem a extensão do arquivo.</p>
+<p>
+Você também deve preparar o vídeo nos seguintes formatos: mp4, ogv, webm e um poster do vídeo em png, jpg e gif. O nome do arquivo deve ser o mesmo em todos os formatos e corresponder ao que você inserir no lugar de [nome_do_arquivo]. Todos os arquivos devem ser enviados para a pasta media\video na raíz do Joomla.
+<p>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/video-2.png" alt=""></figure>
+<p class="muted text-center">Img 30. Sobrescrevendo conteúdo do arquivo</p></div>
+
+<p>
+No próximo passo, você precisa criar um módulo que apresenta o vídeo. Inclua um módulo HTML customizado com o seguinte conteúdo:
+</p>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/video-3.png" alt=""></figure>
+<p class="muted text-center">Img. 31. Configurações do módulo do vídeo de fundo</p></div>
+
+<p>
+Em ambas as abas "Avançado" e no menu "Layout alternativo" escolha o arquivo de template [nome_do_arquivo] criado anteriormente.
+</p>
+
+<p>
+Depois de você realizar todos os passos, você verá o módulo com o vídeo de fundo.
+</p>
+</div>
+
+<div id="parallax">
+<h3>Usando o efeito de Parallax</h3>
+
+<p>
+O efeito de parallax pode ser adicionado ao template com a ajuda do plugin de jQuery <a href="http://markdalgleish.com/projects/stellar.js/" target="_blank" rel="nofollow">Stellar</a>.
+</p>
+
+<p>Para adicionar o efeito na sua página, navegue para "Template manager -> Templates", clique no nome do template que você usa (ThemeXXXX arquivos e detalhes) e abra o arquivo "index.php". Selecione o bloco em que deseja adicionar o efeito de parallax, "folio-row" por exemplo, insira o atributo <pre><code>data-stellar-background-ratio="[valor]"</code></pre> nesse elemento, como mostrado na Imagem 32:</p>
+
+<div class="img-container"><figure class="img-polaroid"><img src="img/parallax-1.png" alt=""></figure>
+<p class="muted text-center">Img 32. Usando o efeito parallax</p></div>
+
+<p>onde [valor] é a proporção que será relativa a rolagem em velocidade natural, você pode procurar informações detalhadas na página de <a href="http://markdalgleish.com/projects/stellar.js/docs/" target="_blank" rel="nofollow">documentação</a> do plugin.</p>
+
+<p>Depois de você realizar todos os passos, você verá o efeito parallax no bloco específico.</p>
+</div>
 
   <div id="features">
     <h3>Funções</h3>
