add kommento links

--- a/index_ru.html
+++ b/index_ru.html
@@ -1086,6 +1086,8 @@
     <p>Чтобы перейти в настройки, проследуйте в меню <b>Components (Компоненты) > Komento > Integrations (Интеграция)</b> и нажмите <b>Articles (Статьи)</b></p>
 
     <p>При помощи настроек компонента, можно активировать комментарии для определенных категорий и статей,  добавить captcha, профили пользователей и т.п. Более детальную информацию о  Komento можно найти на <a href="http://stackideas.com/docs/komento.html" target="_blank">официальном сайте.</a></p>
+
+    <p>В наших шаблонax  используется только стандартная версия Komento. Чтобы воспользоваться дополнительными возможностями данного модуля, мы рекомендуем подписаться на <a href="http://stackideas.com/komento/plans">полную версию</a> продукта. Чтобы увидеть полный список функций , посетите <a href="http://stackideas.com/komento?ref=kmfeature">http://stackideas.com/komento.html?ref=kmfeature</a>. Платная версия Komento также даст Вам профессиональную техническую поддержку</p>
   </div>
 
   <div id="kunena">
