--- a/index_en.html
+++ b/index_en.html
@@ -152,7 +152,7 @@
                             <li><a href="#layout">Layout</a></li>
                             <li><a href="#typography">Typography</a></li>
                             <li><a href="#background_video">Setting Background video</a></li>
-                            <li><a href="#parallax">Using Parallax effect</a></li>                   
+                            <li><a href="#parallax">Using Parallax effect</a></li>
                             <li><a href="#features">Features</a></li>                    
                            </ul> 
                        </dd>
@@ -1066,6 +1066,8 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
     <p>To access configuration settings go to <b>Components > Komento > Integrations</b> and click <b>Articles.</b></p>
 
     <p>Using component settings you can enable comments for specific categories and Joomla articles, add captcha, user profiles, etc. You can learn more about Komento on the <a href="http://stackideas.com/docs/komento.html" target="_blank">official website.</a></p>
+
+    <p>Our templates have only standard version of Komento included. To get access to additional features and get complete support services for Komento extension we recommend to purchase <a href="http://stackideas.com/komento/plans">Komento Professional</a>. Full list of features available <a href="http://stackideas.com/komento?ref=kmfeature">here</a>.</p>
   </div>
 
   <div id="kunena">
