add komento ads translations

--- a/index_es.html
+++ b/index_es.html
@@ -1079,6 +1079,8 @@ Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instal
     <p>Para encontrar los ajustes de configuración, por favor haga clic en Components > Komento > Integrations (Componentes > Komento > Integraciones) y elija Articles.</p>
 
     <p>Con la ayuda de la configuración del componente Usted puede activar comentarios para categorías específicas, añadir captcha, perfiles de usuario etc. Usted puede aprender más sobre Komento en <a href="http://stackideas.com/docs/komento.html" target="_blank">el sitio web oficial</a></p>
+
+    <p>Nuestras plantillas tienen sólo la versión estándar de Komento incluida. Para obtener acceso a características adicionales y obtener servicios de soporte completos para la extensión Komento nosotros recomendamos comprar <a href="http://stackideas.com/komento/plans">Komento Profesional</a>. Lista completa de características disponibles <a href="http://stackideas.com/komento?ref=kmfeature">aquí</a>.</p>
   </div>
 
   <div id="kunena">
