--- a/index_fr.html
+++ b/index_fr.html
@@ -1068,6 +1068,8 @@
     <p>Pour accéder à la configuration des réglages, allez dans « <b>Composants > Komento > Intégrations</b> » (« <b>Components > Komento > Integrations</b> ») et cliquez sur « <b>Articles</b>. »</p>
 
     <p>En utilisant les réglages des composants, vous pouvez activer les commentaires pour des catégories spécifiques, ajouter captcha, des profils d'utilisateurs, ainsi qu'aux articles Joomla, etc. Vous pouvez en apprendre plus à propos de Komento sur le <a href="http://stackideas.com/docs/komento.html" target="_blank">site officiel</a>.</p>
+
+    <p>Nos templates n'incluent que la version standard de Komento. Pour accéder aux fonctionnalités additionnelles et profiter des services de support complet pour l'extension Komento, nous recommandons d'acheter <a href="http://stackideas.com/komento/plans">Komento Professional</a>. La liste complète des fonctionnalités est disponible <a href="http://stackideas.com/komento?ref=kmfeature">ici</a>.</p>
   </div>
 
   <div id="kunena">
