--- a/index_pl.html
+++ b/index_pl.html
@@ -1069,6 +1069,8 @@
     <p> By otworzyć opcje konfiguracji idź do  <b> Komponenty > Komento > Integracje (ang.Components > Komento > Integrations)</b> i kliknij <b>Artykuły (ang.Articles)</b></p>
 
     <p> Używając ustawień komponentów można włączyć komentarze dla specyficznych kategorii, dodać captcha, profile użytkowników jak również artykułów Joomla it. Więcej o Komento możesz się dowiedzieć na oficjalnej stronie: <a href="http://stackideas.com/docs/komento.html" target="_blank"></a></p>
+
+    <p>Nasze szablony posiadają tylko standardową wersję Komento. Aby uzyskać dostęp do dodatkowych opcji oraz pełnego supportu Komento, rekomendujemy zakup <a href="http://stackideas.com/komento/plans">Komento Professional</a>. Pełna lista opcji dostępna <a href="http://stackideas.com/komento?ref=kmfeature">tutaj</a>.</p>
   </div>
 
   <div id="kunena">
