--- a/index_tr.html
+++ b/index_tr.html
@@ -1069,6 +1069,8 @@
     <p>Yapılandırma ayarlarına erişebilmek için <b>Components > Komento > Integrations</b> <b>Articles</b> tıklayın.</p>
 
     <p>Belirli kategorideki yorumları etkinleştirmek Joomla makaleler vb. yanı sıra bileşen ayarlarını kullanarak, kaptan, kullanıcı profilleri de ekleyebilirsiniz. Daha fazla bilgi edinebilmek adına <a href="http://stackideas.com/docs/komento.html" target="_blank">resmi web sitesi</a></p>
+
+    <p>Şablonlarımız sadece Komento'nun standart versiyonunu içermektedir. Ek özelliklerden yararlanmak ve Komento için sınırsız destek hizmeti almak için, <a href="http://stackideas.com/komento/plans">Komento Professional'ı</a> satın almanızı öneririz. Profesyonel sürümdeki özelliklerin tam listesine <a href="http://stackideas.com/komento?ref=kmfeature">buradan ulaşabilirsiniz</a>.</p>
   </div>
 
   <div id="kunena">
