--- a/index_de.html
+++ b/index_de.html
@@ -1062,6 +1062,8 @@ Damit Sie Beispieldaten in der Datenbank importieren, fühlen Sie diese leichte 
     <p>Die Konfigurationseinstellungen rufen Sie in  <b>Components / Kommentare > Komento > Integrations</b> mit dem Druck auf <b>Articles/Artikel</b> an. </p>
 
     <p>Mit Hilfe von Konfigurationseinstellungen können Sie Kommentare für bestimmte Kategorien aktivieren, Captcha und Nutzerprofils hinzufügen usw. Mehr können Sie <a href="http://stackideas.com/docs/komento.html" target="_blank">in der offizielle Website</a> erfahren</p>
+
+    <p>In unseren Vorlage wird nur die Standardversion von Komento verwendet. Um zusätzliche Funktionen dieses Moduls nutzen zu können, empfehlen wir <a href="http://stackideas.com/komento/plans">die Vollversion des</a> Produktes zu abonnieren. Um die ganze Liste von Funktionen anzuschauen, folgen Sie <a href="http://stackideas.com/komento?ref=kmfeature">http://stackideas.com/komento.html?ref=kmfeature</a>. Kostenpflichtige Version von Komento bietet Ihnen auch professionelle technische Unterstützung an.</p>
   </div>
 
   <div id="kunena"> 
