--- a/index_it.html
+++ b/index_it.html
@@ -1067,6 +1067,8 @@
     <p>Per accedere alle impostazioni di configurazione andare su <b>Componenti> Komento > Integrazioni (Components > Komento > Integrations)</b> e cliccare su <b>Articoli (Components > Komento > Integrations > Articles)</b></p>
 
     <p>Utilizzando le impostazioni componentepotrete abilitare i commenti per categorie specifiche, aggiungere captcha, profili utenti, articoli Joomla e tanto altro. Per saperne di più su Komento visita il <a href="http://stackideas.com/docs/komento.html" target="_blank">sito ufficiale</a>.</p>
+
+    <p>I nostri template includono solo la versione standard di Komento. Per accedere a funzioni aggiuntive e a supporto completo per l'estensione Komento, vi consigliamo di acquistare <a href="http://stackideas.com/komento/plans">Komento Professional</a>. <a href="http://stackideas.com/komento?ref=kmfeature">Qui</a> trovate una lista completa delle caratteristiche.</p>
   </div>
 
   <div id="kunena">
