--- a/index_pt.html
+++ b/index_pt.html
@@ -1082,6 +1082,8 @@
     <p>Para acessar as configurações, vá para  <b>Componentes > Komento > Integrações (em Inglês, &quot;Components &gt; Komento &gt; Integrations&quot;)</b> e clique em Artigos (em Inglês, &quot;<b>Articles&quot;)</b></p>
 
     <p>Ao usar configurações do componente você pode habilitar comentários para categorias específicas, adicionar captcha, usar perfis assim como nos artigos do Joomla, etc. Você pode saber mais sobre o Komento no <a href="http://stackideas.com/docs/komento.html" target="_blank">site oficial</a></p>
+
+    <p>Nossos templates têm apenas a versão padrão do Komento incluso. Para ter acesso aos recursos adicionais e obter suporte completo à extensão Komento, recomendamos a compra do <a href="http://stackideas.com/komento/plans">Komento Professional</a>. A lista completa de recursos está disponível <a href="http://stackideas.com/komento?ref=kmfeature">aqui</a>.</p>
   </div>
 
   <div id="kunena">
