update ticket link

--- a/index_pt.html
+++ b/index_pt.html
@@ -1306,7 +1306,7 @@ O efeito de parallax pode ser adicionado ao template com a ajuda do plugin de jQ
     <h4>Ajuda e Suporte</h4>
     <ul class="list">
       <li><a href="http://chat.template-help.com/"  target="_blank">Chat Ao Vivo</a></li>
-      <li><a href="http://esupport.template-help.com/index.php?/Tickets/Submit"  target="_blank">Sistema de ticket de ajuda</a></li>
+      <li><a href="http://support.template-help.com/index.php?/Tickets/Submit"  target="_blank">Sistema de ticket de ajuda</a></li>
     </ul>
   </div>
 
