--- a/index_de.html
+++ b/index_de.html
@@ -1270,7 +1270,7 @@ defined('_JEXEC') or die;
     <h4>Hilfe und Support</h4>
     <ul class="list">
       <li><a href="http://chat.template-help.com/" target="_blank">Live Chat</a></li>
-      <li><a href="http://esupport.template-help.com/index.php?/Tickets/Submit"  target="_blank"> Hilfe Ticket System </a></li>
+      <li><a href="http://support.template-help.com/index.php?/Tickets/Submit"  target="_blank"> Hilfe Ticket System </a></li>
     </ul>
   </div>
 
