--- a/index_en.html
+++ b/index_en.html
@@ -1287,7 +1287,7 @@ defined('_JEXEC') or die;
     <h4>Help and Support</h4>
     <ul class="list">
       <li><a href="http://chat.template-help.com/" target="_blank">Live chat</a></li>
-      <li><a href="http://esupport.template-help.com/index.php?/Tickets/Submit"  target="_blank">Help ticket system</a></li>
+      <li><a href="http://support.template-help.com/index.php?/Tickets/Submit"  target="_blank">Help ticket system</a></li>
     </ul>
   </div>
 
