--- a/index_es.html
+++ b/index_es.html
@@ -1286,7 +1286,7 @@ defined('_JEXEC') or die;
     <h4>Help and Support</h4>
     <ul class="list">
       <li><a href="http://chat.template-help.com/" target="_blank">chat</a></li>
-      <li><a href="http://esupport.template-help.com/index.php?/Tickets/Submit"  target="_blank">Sistema de tickets</a></li>
+      <li><a href="http://support.template-help.com/index.php?/Tickets/Submit"  target="_blank">Sistema de tickets</a></li>
     </ul>
   </div>
 
