--- a/index_fr.html
+++ b/index_fr.html
@@ -1276,7 +1276,7 @@ defined('_JEXEC') or die;
     <h4>Aide et support</h4>
     <ul class="list">
       <li><a href="http://chat.template-help.com/"  target="_blank">Chat en direct</a></li>
-      <li><a href="http://esupport.template-help.com/index.php?/Tickets/Submit"  target="_blank">Système de tickets d'aide</a></li>
+      <li><a href="http://support.template-help.com/index.php?/Tickets/Submit"  target="_blank">Système de tickets d'aide</a></li>
     </ul>
   </div>
 
