--- a/index_pl.html
+++ b/index_pl.html
@@ -1277,7 +1277,7 @@ defined('_JEXEC') or die;
     <h4>Pomoc i wsparcie</h4>
     <ul class="list">
       <li><a href="http://chat.template-help.com/"  target="_blank">Czat</a></li>
-      <li><a href="http://esupport.template-help.com/index.php?/Tickets/Submit"  target="_blank">System wiadomości pomocy</a></li>
+      <li><a href="http://support.template-help.com/index.php?/Tickets/Submit"  target="_blank">System wiadomości pomocy</a></li>
     </ul>
   </div>
 
