--- a/index_pt_br.html
+++ b/index_pt_br.html
@@ -1210,7 +1210,7 @@
     <h4>Ajuda e Suporte</h4>
     <ul class="list">
       <li><a href="http://chat.template-help.com/"  target="_blank">Chat Ao Vivo</a></li>
-      <li><a href="http://esupport.template-help.com/index.php?/Tickets/Submit"  target="_blank">Sistema de ticket de ajuda</a></li>
+      <li><a href="http://support.template-help.com/index.php?/Tickets/Submit"  target="_blank">Sistema de ticket de ajuda</a></li>
     </ul>
   </div>
 
