--- a/index_ru.html
+++ b/index_ru.html
@@ -1296,7 +1296,7 @@ defined('_JEXEC') or die;
     <h4>Помощь и поддержка</h4>
     <ul class="list">
       <li><a href="http://chat.template-help.com/" target="_blank">Чат</a></li>
-      <li><a href="http://esupport.template-help.com/index.php?/Tickets/Submit"  target="_blank">Тикет-система</a></li>
+      <li><a href="http://support.template-help.com/index.php?/Tickets/Submit"  target="_blank">Тикет-система</a></li>
     </ul>
   </div>
 
