--- a/index_tr.html
+++ b/index_tr.html
@@ -1277,7 +1277,7 @@ defined('_JEXEC') or die;
     <h4>Yardım ve Destek</h4>
     <ul class="list">
       <li><a href="http://chat.template-help.com/"  target="_blank">Canlı Sohbet</a></li>
-      <li><a href="http://esupport.template-help.com/index.php?/Tickets/Submit"  target="_blank">Ticked Yardım Sistemi</a></li>
+      <li><a href="http://support.template-help.com/index.php?/Tickets/Submit"  target="_blank">Ticked Yardım Sistemi</a></li>
     </ul>
   </div>
 
